--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     
     <h1>Sneaker Collection</h1>
-    <img scr=https://avatars0.githubusercontent.com/u/68917833?v=4>     
+    <img scr="https://avatars0.githubusercontent.com/u/68917833?v=4">     
  
     Hello there, awesome person!
   </body>
