--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>My favorite Jordan Silhouettes</h1>
     
     <ol>
-      <li> Jordan 1</li>
+      <li> Jordan 1 <a href="https://stockx.com/air-jordan-1-retro-high-satin-black-toe-w/" This is a link to purchase the Jordan 1> </li>
       <li> Jordan 5</li>
       <li> Jordan 3</li>
       <li> Jordan 4</li>
