--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   
   <head>
+    
+    <link rel="stylesheet" href="style.css">    
+    
     <title> Matt's web page! </title>
   </head>
   
